<resources>
    <string name="app_name">Homework Assignment Task App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="tabs_upcoming">Tasks</string>
    <string name="tabs_courses">Classes</string>
    <string name="tabs_completed">Calendar</string>

    <string name="menu_assignments">Home</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_add_class">Add a Class</string>
    <string name="menu_edit_class">Edit Class</string>
    <string name="menu_edit_assignment">Edit Task</string>

    <string name="class_list_filename">class_list.txt</string>

    <string-array name="tasks">
        <item>CS262 Final Exam</item>
        <item>Project 3 Due</item>
    </string-array>

    <string-array name="description">
        <item>description</item>
        <item>description</item>
    </string-array>

    <string-array name="priorities">
        <item>Default</item>
        <item>Medium</item>
        <item>High</item>
        <item>Very High</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <string name="required_indicator">(*) Required</string>

    <string name="class_name">Class Name</string>
    <string name="class_start_date">Start Date</string>
    <string name="class_end_date">End Date</string>
    <string name="class_instructor_name">Instructor</string>
    <string name="class_info">Class Details</string>
    <string name="class_color">Color</string>
    <string name="delete_class">Delete Class</string>

    <string name="add_class_name">Enter Class Name</string>
    <string name="add_class_instructor">Enter Instructor Name</string>
    <string name="add_class_start_date">Add Start Date</string>
    <string name="add_class_end_date">Add End Date</string>
    <string name="add_class_color">Add Color</string>

    <string name="assignment_name">Task Name</string>
    <string name="assignment_name_r">Task Name(*)</string>
    <string name="assignment_description">Description</string>
    <string name="assignment_due_date">Due Date</string>
    <string name="assignment_due_date_r">Due Date(*)</string>
    <string name="assignment_due_time">Due Time</string>
    <string name="assignment_priority">Priority</string>
    <string name="assignment_priority_level">Task Priority</string>
    <string name="delete_assignment">Delete Task</string>
    <string name="complete_assignment">Complete Task</string>
    <string name="assignment_category">Task Category</string>
    <string name="assignment_class_name">Class</string>

    <string name="add_assignment_name">Enter Task Name</string>
    <string name="add_assignment_description">Enter Description</string>
    <string name="add_assignment_due_date">Set Due Date</string>
    <string name="add_assignment_due_time">Current Time</string>
    <string name="add_assignment_class_name">Set Class</string>
    <string name="add_assignment_priority">Set Priority</string>

    <string name="category_upcoming">Upcoming</string>
    <string name="category_complete">Complete</string>

    <string name="channel_name">Main Notifications</string>
    <string name="channel_description">Description</string>

    <string name="class_date">Class Date</string>
    <string name="date_started_on">Started on %1$s</string>
    <string name="date_ended_on">Ended on %1$s</string>
    <string name="date_ends_on">Ends on %1$s</string>
    <string name="date_starts_on">Starts on %1$s</string>

    <string name="dialog_delete_class">Are you sure you want to delete this class? (You cannot undo this!)</string>
    <string name="dialog_delete_assignment">Are you sure you want to delete this task? (You cannot undo this!)</string>

    <string name="data_error">Error finding task</string>
    <string name="add_assignment_name_error">Task name must not be blank!</string>
    <string name="add_assignment_due_date_error">Task must have due date!</string>
    <string name="assignment_marked_complete">\"%1$s\" complete!</string>
    <string name="assignment_marked_incomplete">\"%1$s\" marked incomplete</string>
    <string name="assignment_successfully_added">\"%1$s\" added!</string>
    <string name="assignment_successfully_deleted">\"%1$s\" deleted</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="undo">UNDO</string>
    <string name="none">None</string>
    <string name="blank" />
    <string name="default_text">Default</string>
    <string name="welcome">Welcome!</string>
    <string name="open_app">Open app</string>

    <string name="pick_a_color">Pick a Color</string>
    <string name="no_instructor">No Instructor</string>
    <string name="class_tasks">Tasks</string>
    <string name="mark_complete">Complete</string>

</resources>